# codex-switcher

./: .gitattributes  .gitignore  .gitleaks.toml  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  install.sh  package.json  replit.md
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-release-checklist.yml  config.yml
.github/workflows/: coverage.yml  desktop-release.yml  release-smoke.yml  release.yml  tests.yml
.pipeline/: preflight.json  router_chain_state.json  state.json
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  bridge.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/_backup/: App.tsx  bridge.ts  styles.css
apps/desktop/src/components/: ActivityBar.tsx  ProfileDetail.tsx  ProfileList.tsx  QuickSwitchView.tsx  ReloadView.tsx  SettingsView.tsx  StatusStrip.tsx  SwitchPanel.tsx  ToastContainer.tsx
apps/desktop/src/hooks/: useAppSettings.ts  useDesktopWindowState.ts  useRecentActions.ts  useToasts.ts  useWorkspaceLayout.ts
checksums/: .gitkeep  v0.1.0.txt  v0.1.1.txt  v0.1.2.txt  v0.2.1.txt  v0.2.10.txt
docs/: README.md  architecture.md  documentation_standards.md  principles.md  tools_config.md
docs/process/: packaging-compatibility.md  release-checklist.md  release-strategy.md
docs/project/: architecture_health.md  codebase_audit.md  design_guidelines.md  desktop_gui_bootstrap.md  docs_audit.md  maintenance.md  patterns_catalog.md  requirements.md  runtime_map.md  tech_stack.md
docs/research/: rsh-001-repository-hygiene.md
docs/tasks/: kanban_board.md  pipeline_readiness_report.md
docs/tasks/reports/: pipeline-2026-03-07.md
scripts/: build-desktop.sh  check.ps1  check.sh  clean-artifacts.sh  demo-screenshots.ps1  env-check.sh  package-npm.sh  pre-commit  pre-push  prepare-tauri-bundler-tools.ps1  print-release-notes.sh  release-artifacts.sh  release-prep.sh  release-tag  run-tauri-build.mjs  smoke-desktop.ps1  verify-artifacts.sh  verify-node-packaging.mjs  verify-release-publication.mjs
src/: auth.rs  cli.rs  common.rs  config.rs  everycode.rs  ide_reload.rs  lib.rs  main.rs  profiles.rs  relay.rs  requirements.rs  test_utils.rs  ui.rs  updates.rs  usage.rs
src/switcher/: auth.rs  cli.rs  cli_runtime.rs  common.rs  config.rs  ide_reload.rs  mod.rs  profile_identity.rs  profile_store.rs  profiles.rs  profiles_delete.rs  profiles_load.rs  profiles_migrate.rs  profiles_priority.rs  profiles_reserve.rs  profiles_runtime.rs  profiles_service.rs  profiles_status.rs  profiles_switch.rs  profiles_tests.rs  profiles_ui.rs  relay.rs  requirements.rs  test_utils.rs  ui.rs  updates.rs  usage.rs
tests/: README.md  auth.rs  cli.rs  switcher_cli.rs  updates.rs  usage.rs
tests/common/: mod.rs
(+105 files in other folders)
