[package]
name = "codex-profiles"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Manage multiple Codex CLI auth profiles"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
fslock = "0.2.1"
inquire = "0.9.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
shlex = "1.3.0"
spinner = "0.5.0"
supports-color = "3.0.2"
ureq = { version = "3.1.4", features = ["json"] }
