[package]
name = "codex-switcher"
version = "0.2.10"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "Manage multiple Codex CLI accounts with usage-aware switching"
repository = "https://github.com/curlless/codex-switcher"
documentation = "https://docs.rs/codex-switcher"
readme = "README.md"
keywords = ["codex", "cli", "profile", "auth", "openai"]
categories = ["command-line-utilities", "authentication"]
exclude = [
    ".github/",
    "scripts/",
    "bin/",
    "dist/",
    "target/",
    ".tmp/",
    "memory-bank/",
    "*.profraw",
    "*.profdata",
    "coverage/",
    "lcov.info",
]

[[bin]]
name = "codex-switcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
directories = "6.0"
fslock = "0.2"
inquire = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"
shlex = "1.3"
supports-color = "3.0"
toml = "0.9"
ureq = { version = "3.1", features = ["json"] }

[features]
switcher-unit-tests = []

[dev-dependencies]
tempfile = "3.10"
