[package]
name = "codex-switcher-desktop"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Windows-first desktop GUI shell for codex-switcher"

[package.metadata]
desktop = true

[lib]
name = "codex_switcher_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
codex-switcher = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-window-state = "2.4.1"
